Weird align fix for comment bottombar links v1

--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -2774,7 +2774,7 @@ button.new-form-one {
 }
 
 .commblock .bottombar.links {
-  margin: 4px 0 0 0.25em;
+  margin: -0.3em 0 0 0.25em;
   font: -webkit-control;
   font-size: 1em;
 }
